# flarecrawl

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  fc_stderr.txt  justfile  pyproject.toml
.claude/: settings.local.json
.claude/skills/autoresearch/: SKILL.md
.claude/skills/flarecrawl-extraction/: SKILL.md
.claude/skills/flarecrawl-ops/: SKILL.md
.forma/: architect-v0.14.0-prompt.md
.forma/logs/: forma-2026-04-17.jsonl  forma-2026-04-18.jsonl
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: publish.yml
design/: mcp-docs-snippet.md  mcp-manifest.md  mcp-wiring.md
docs/: BENCHMARK-REPORT.md  FEATURE-EVALUATION.md  HARD-TARGETS.md  PERF-PLAN-PROGRESS.md  README.md  RELEASING.md  UPGRADE-PLAN-v0.26.0.md  benchmark-report.md  custom-overlay-validation.md  tech-detect-vs-w3techs.md
docs/architecture/: flows.json  flows.md  index.html
docs/archive/: UPGRADE-PLAN-v0.23.0.md
docs/archive/mcp-design/: mcp-docs-snippet.md  mcp-manifest.md  mcp-wiring.md
docs/research/: FRONTIER-COMPARISON.md
examples/recipes/: README.md  war-gov-uap.yml
src/flarecrawl/: __init__.py  _bloom_io.py  _http.py  _validate.py  authcrawl.py  batch.py  blockdetect.py  browser_cookies.py  cache.py  canon.py  cdp.py  cli.py  client.py  config.py  cookies.py  credentials.py  dead_letter.py  default_rules.yaml  delta.py  design.py  extract.py  fetch.py  fingerprint.py  frontier.py  frontier_v2.py  guide.py  humanize.py  jarhealth.py  journal.py  json_compat.py  local_browser.py  mcp_serve.py  negotiate.py  openapi.py  p6.py  paywall.py  ratelimit.py  recipe.py  robots.py  rules.py  (+8 more)
src/flarecrawl/assets/: stealth_init.js
src/flarecrawl/cli/: __init__.py  _common.py  auth_cmds.py  cdp_cmds.py  crawl.py  design_cmds.py  discover.py  extract_cmd.py  fetch.py  frontier_cmds.py  guide_cmd.py  mcp_cmd.py  media.py  recipe.py  scrape.py  search.py  sessions.py  techdetect.py  webmcp_cmds.py
src/flarecrawl/mcp_tools/: __init__.py  _errors.py  _exec.py  composite.py  curated.py  orientation.py  raw.py  registry.py
src/flarecrawl/wappalyzer_data/: LICENSE.wappalyzer_data  custom_fingerprints.json
tests/: _probe_vendor_sites.py  _probe_vendor_sites_cdp.py  audit_fingerprints.py  bench-log.tsv  bench-results-final.json  bench-results-final2.json  bench-results-iter3.json  bench-results-iter4.json  bench-results-iter5.json  bench-results-iter7.json  bench-results-race.json  bench-results-round2.json  bench-results.json  bench.py  bench_sanitise.py  bench_tech_detect.py  compare_w3techs.py  conftest.py  test_authcrawl.py  test_authcrawl_wire.py  test_batch.py  test_blockdetect.py  test_body_capture.py  test_cache.py  test_canon.py  test_cdp.py  test_cdp_errors.py  test_cli.py  test_cli_authcrawl.py  test_client.py  test_cookies.py  test_crawl_phases.py  test_credentials.py  test_data_source_probe.py  test_dead_letter.py  test_default_user_agent.py  test_delta.py  test_design.py  test_extract.py  test_fetch.py  (+41 more)
tests/corpus/attacks/css-class-hiding/: bootstrap-hidden.html  hidden-attribute.html  sr-only-abuse.html
tests/corpus/attacks/entity-evasion/: html-entities.md
tests/corpus/attacks/exfiltration/: image-exfil.md
tests/corpus/attacks/hidden-iframes/: hidden-iframe.html  zero-dim-iframe.html
tests/corpus/attacks/hidden-inputs/: hidden-field.html
tests/corpus/attacks/hidden-text/: clip-path.html  color-transparent.html  combined-hiding.html  display-none.html  font-size-zero.html  offscreen.html  opacity-zero.html  text-indent.html  visibility-hidden.html
tests/corpus/attacks/homoglyphs/: cyrillic-evasion.md
tests/corpus/attacks/html-comments/: instruction-comment.html  multi-comment.html  system-prompt-comment.html
tests/corpus/attacks/meta-injection/: meta-instruction.html
tests/corpus/attacks/prompt-injection/: admin-prefix.md  base64-obfuscated.md  chained-injection.md  delimiter-fences.md  ignore-previous.md  multi-turn.md  role-play.md  system-prefix.md  xml-tags.md  you-are-now.md
tests/corpus/attacks/semantic-manipulation/: authority-claims.md  emotional-pressure.md  fake-official.md  false-consensus.md  urgency-cluster.md
tests/corpus/attacks/suspicious-attrs/: alt-text-injection.html  aria-injection.html  data-instruction.html  title-injection.html
tests/corpus/attacks/unicode-tricks/: bidi-injection.html  homoglyphs.html  rtl-override.html  zero-width-spaces.html
tests/corpus/benign/: admin-panel.html  alt-text-descriptive.html  aria-accessibility.html  code-tutorial.html  comment-heavy.html  cybersec-blog.html  form-hidden-fields.html  hidden-responsive.html  image-gallery-cdn.md  news-authority.html  prompt-engineering.md  security-article.html  sr-only-accessible.html  system-docs.md  unicode-i18n.html  urgency-medical.html
tests/fixtures/routing/: README.md  api.json  calendar.ics  catalog.xml  cities.csv  config.toml  config.yaml  contacts.vcf  events.ndjson  feed.atom  feed.rss  genes.tsv  places.geojson  places.kml  schema.jsonld  triples.ttl
tests/fixtures/selectolax/: _gen_expected.py  blog.expected.json  blog.html  news.expected.json  news.html  spa.expected.json  spa.html
tests/live/: conftest.py  test_design_live.py  test_interact_live.py  test_rest_live.py  test_videos_live.py
tests/live/fixtures/: dropdown.html  dynamic.html  form.html  multi-step.html
