[project]
name = "flarecrawl"
version = "0.17.0"
description = "Cloudflare Browser Run CLI - Firecrawl-compatible, cost-efficient at scale"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "0xDarkMatter" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[http2]>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
cdp = ["websockets>=13.0"]
perf = [
  "uvloop>=0.19.0; sys_platform != 'win32'",
  "orjson>=3.9.0",
  "selectolax>=0.3.0",
  "aiolimiter>=1.1.0",
  "protego>=0.3.0",
  "rbloom>=1.0.0",
  "aiosqlite>=0.19.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-instrumentation-httpx>=0.41b0",
]

[project.scripts]
flarecrawl = "flarecrawl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flarecrawl"]

# ============================================================
# CODE QUALITY
# ============================================================
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.forma]
description = "Cloudflare Browser Rendering - scrape, crawl, map, download, extract, screenshot, pdf, favicon"
resources = ["scrape", "crawl", "download", "extract", "screenshot", "pdf", "favicon", "search", "discover", "schema", "map", "fetch", "openapi", "cdp", "webmcp", "interact", "negotiate", "rules", "session", "design"]
auth = "api_key"
origin = "forma"
install = "uv tool install --editable ."
command = "flarecrawl"
env-key = "FLARECRAWL_API_TOKEN"
api-url = "https://dash.cloudflare.com/"
maturity = "scaffold"
