[project]
name = "flarecrawl"
version = "0.30.0"
description = "Cloudflare Browser Run CLI - Firecrawl-compatible, cost-efficient at scale"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "0xDarkMatter" }
]
keywords = [
    "web-scraping", "crawler", "cloudflare", "browser-rendering",
    "firecrawl", "cdp", "anti-bot", "markdown", "screenshot",
    "headless-browser", "playwright", "curl-cffi", "data-extraction",
]
# Per PEP 639 the SPDX `license` expression replaces the deprecated
# `License ::` classifier — do not add one back (twine/hatchling reject
# specifying both).
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[http2]>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
    # selectolax is imported unconditionally by extract.py and authcrawl.py,
    # both of which are pulled in transitively whenever the CLI runs (e.g.
    # `flarecrawl scrape ...`). Listing it as a core dependency keeps a
    # bare `uv sync` install actually runnable.
    "selectolax>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
cdp = ["websockets>=13.0"]
cookies = ["browser-cookie3>=0.20"]
secure = []  # keyring is now a core dep; extra kept for backwards compatibility
stealth = ["curl_cffi>=0.7.0"]
local-browser = ["playwright>=1.40.0"]
videos = ["yt-dlp>=2024.1.0"]
recipes = ["pyyaml>=6.0"]
perf = [
  "uvloop>=0.19.0; sys_platform != 'win32'",
  "orjson>=3.9.0",
  "aiolimiter>=1.1.0",
  "protego>=0.3.0",
  "rbloom>=1.0.0",
  "aiosqlite>=0.19.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-instrumentation-httpx>=0.41b0",
]

[project.scripts]
flarecrawl = "flarecrawl.cli:app"

[project.urls]
Homepage = "https://github.com/0xDarkMatter/flarecrawl"
Repository = "https://github.com/0xDarkMatter/flarecrawl"
Changelog = "https://github.com/0xDarkMatter/flarecrawl/blob/main/CHANGELOG.md"
Issues = "https://github.com/0xDarkMatter/flarecrawl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flarecrawl"]

[tool.hatch.build.targets.wheel.force-include]
"src/flarecrawl/py.typed" = "flarecrawl/py.typed"
# Ship the agent guide inside the wheel so `flarecrawl guide` works after a
# bare `pip install` (no repo on disk). Single source of truth — same file
# repo readers see.
"AGENTS.md" = "flarecrawl/AGENTS.md"
# Vendored Wappalyzer fingerprint database (GPL-3.0 data — see
# wappalyzer_data/LICENSE.wappalyzer_data). Ships so `--detect-tech` and
# Client.detect_tech() work after a bare install with no repo on disk.
"src/flarecrawl/wappalyzer_data" = "flarecrawl/wappalyzer_data"

# ============================================================
# CODE QUALITY
# ============================================================
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.forma]
description = "Cloudflare Browser Rendering - scrape, crawl, map, download, extract, screenshot, pdf, favicon"
resources = ["scrape", "crawl", "download", "extract", "screenshot", "pdf", "favicon", "search", "discover", "schema", "map", "fetch", "frontier", "openapi", "cdp", "webmcp", "interact", "negotiate", "rules", "session", "design", "videos"]
auth = "api_key"
origin = "forma"
install = "uv tool install --editable ."
command = "flarecrawl"
env-key = "FLARECRAWL_API_TOKEN"
api-url = "https://dash.cloudflare.com/"
maturity = "scaffold"
status = "experimental"
